# Mini-Restaurant

./: CMakeLists.txt  README.md  main  main.cpp
libraries/: LLorders.cpp  LLorders.h  individualOrders.cpp  individualOrders.h  item.cpp  item.h  menu.cpp  menu.h  order.cpp  order.h  studentorders.cpp  studentorders.h
